# glossary-config-updater

./: MANIFEST.in  README.md  build-package.sh  pyproject.toml  qvscribe_schema_3_1_0.json  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: guide.md
examples/: .env.example  .gitignore.example
examples/glossary/: bad-terms.csv  case-duplicate-terms.csv  duplicate-terms.csv  sample-terms.csv  sample-terms.json  sample-terms.yaml
examples/workflows/: github-actions.yml  gitlab-ci.yml
glossary_updater/: __init__.py  api_client.py  config.py  main.py  merger.py  processor.py  utils.py
scripts/: build-wheel.sh  demo.sh  setup-dev.sh  test-connection.sh  test-wheel.sh  validate-files.sh
tests/: __init__.py  run-tests.sh  test-merger.py  test-processor.py  test_main.py
tests/fixtures/: invalid-terms.csv  terms.json  terms.yaml  valid-terms.csv
tools/: glossary_updater.py
